Dev (#11)
* added qna and iuse pages, updated css

Signed-off-by: Aaron <10177767+AaronPinto@users.noreply.github.com>

* added qna and iuse pages, updated css

Signed-off-by: Aaron <10177767+AaronPinto@users.noreply.github.com>

* removed margin and padding by default on everything

Signed-off-by: Aaron <10177767+AaronPinto@users.noreply.github.com>

* remove auto generated files

Signed-off-by: Aaron <10177767+AaronPinto@users.noreply.github.com>

* ignore autogenerated html and css files

Signed-off-by: Aaron <10177767+AaronPinto@users.noreply.github.com>

* update margin and padding for elements

Signed-off-by: Aaron <10177767+AaronPinto@users.noreply.github.com>

* updated h3 padding, title is inline block

Signed-off-by: Aaron <10177767+AaronPinto@users.noreply.github.com>

* update use_list padding

Signed-off-by: Aaron <10177767+AaronPinto@users.noreply.github.com>

* update text spacing on iuse

Signed-off-by: Aaron <10177767+AaronPinto@users.noreply.github.com>

* update h1 font weight in index

Signed-off-by: Aaron <10177767+AaronPinto@users.noreply.github.com>

* update h1 in other html files as well

Signed-off-by: Aaron <10177767+AaronPinto@users.noreply.github.com>

* update css media queries

Signed-off-by: Aaron <10177767+AaronPinto@users.noreply.github.com>

* update link colour

Signed-off-by: Aaron <10177767+AaronPinto@users.noreply.github.com>

* remove media queries from css files

Signed-off-by: Aaron <10177767+AaronPinto@users.noreply.github.com>

* added critical for css, fixed qna

Signed-off-by: Aaron <10177767+AaronPinto@users.noreply.github.com>

* hide scrollbar

Signed-off-by: Aaron <10177767+AaronPinto@users.noreply.github.com>

* move website to its own repo

Signed-off-by: Aaron <10177767+AaronPinto@users.noreply.github.com>

* update gitignore

Signed-off-by: Aaron <10177767+AaronPinto@users.noreply.github.com>

* add quiet flag to spam command, update imports